1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-web-server-srv
spec:
  type: NodePort
  selector:
    app: html-web-server
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
