1.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: html-web-server-srv-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: html-web-server-srv
          servicePort: 2345
